# notebooklm-skill

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-TW.md  SKILL.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: SETUP.md  SETUP.zh-TW.md
examples/research-to-article/: README.md
examples/research-to-threads/: README.md
examples/trend-to-content/: README.md
mcp-server/: tools.py
mcp_server/: server.py  tools.py
scripts/: make_video.sh  notebooklm_client.py  pipeline.py
